--- a/src/app/ng-calendar/calendar.component.html
+++ b/src/app/ng-calendar/calendar.component.html
@@ -9,7 +9,12 @@
   </div>
   <div class="week" *ngFor="let week of grid">
     <div class="day" *ngFor="let day of week">
-      <span *ngIf="day.num">{{ day.num }}</span>
+      <p *ngIf="day.num">
+        <strong>{{ day.num }}</strong>
+      </p>
+      <p *ngFor="let match of day.matches">
+        <span>{{ match.title }}</span>
+      </p>
     </div>
   </div>
 </div>
