--- a/src/app/ng-calendar/calendar.component.scss
+++ b/src/app/ng-calendar/calendar.component.scss
@@ -23,10 +23,17 @@
       border-right: 1px dashed #555;
       padding: 7px;
 
-      span {
+      p {
         background: #ddd;
+        border-radius: 10px;
+        float: left;
         padding: 2px 5px;
-        margin-right: 5px;
+        margin: 2px;
+
+        span {
+          font-size: 0.8rem;
+          white-space: nowrap;
+        }
       }
     }
 
