--- a/src/app/ng-calendar/calendar.component.scss
+++ b/src/app/ng-calendar/calendar.component.scss
@@ -4,15 +4,16 @@ h1 {
 }
 
 .month {
-  border: 1px solid black;
+  border: 1px solid #aaa;
 
   .days {
     display: flex;
+    border-bottom: 1px dashed #aaa;
 
     .day {
       flex: 1;
-      background: #ccc;
-      padding: 3px;
+      background: #eee;
+      padding: 5px;
       text-align: center;
     }
   }
@@ -20,16 +21,16 @@ h1 {
   .week {
     display: flex;
     min-height: 50px;
-    border-bottom: 1px dashed #555;
+    border-bottom: 1px dashed #aaa;
 
     .day {
       flex: 1;
-      border-right: 1px dashed #555;
+      border-right: 1px dashed #aaa;
       padding: 7px;
 
       p {
-        background: #ddd;
-        border-radius: 10px;
+        background: #eee;
+        border-radius: 5px;
         float: left;
         padding: 2px 5px;
         margin: 2px;
@@ -38,6 +39,13 @@ h1 {
           font-size: 0.8rem;
           white-space: nowrap;
         }
+      }
+
+      p:first-child {
+        background: #999;
+        color: white;
+        min-width: 20px;
+        text-align: center;
       }
     }
 
